test/types/records/engin/parentheseslessConstError.good
parentheseslessConstError.chpl:3: syntax error: 'new' expression is missing its argument list
