test/types/records/engin/parentheseslessConstError.chpl
record foo { var field = 5;} 

var ir = new foo;
writeln(ir.field);
//above lines compile with/without --verify

